--- a/src/index.css
+++ b/src/index.css
@@ -404,7 +404,9 @@ span{
     justify-content: center;
     align-items: center;
     width: 35%;  
-    border: 1px solid rgb(123, 123, 123) ;
+    border-left: 1px solid rgb(123, 123, 123) ;
+    border-right: 1px solid rgb(123, 123, 123) ;
+    border-top: 1px solid rgb(123, 123, 123) ;
   
 }
 
@@ -418,8 +420,7 @@ span{
     width: 100%;
     height: 50px;
     border-bottom: 1px solid gray;
-    position: sticky;
-    top:0px;
+    
 }
 
 .header_title{
@@ -604,9 +605,11 @@ textarea{
  }
 
  .tweet-image img{
-   width: 100%;
-    height: auto;
-    border-radius: 10px;
+    width: 100%;
+    max-height:400px;
+    border-radius:10px;
+    object-fit:cover;  
+   
   }
 
  .tweet-title-author{
@@ -634,6 +637,11 @@ textarea{
     display: flex;
     justify-self: center;
     align-self: center;
+ }
+
+ .tweet-action-btn-span:hover{
+    color:red;
+
  }
 
 
@@ -813,7 +821,14 @@ h4{
     height: 50%;
     width: 100%;
 }
-
+.btn-retour-pageprofil:hover{
+  /* border-radius: 50%;
+  height:30px;
+  height:30px;*/
+  
+  border-radius: 20px;
+  background-color: #333639;
+}
 .btnReturn_UserNameAndNumberPost{
     display: flex;
     justify-content:flex-start;
@@ -835,14 +850,14 @@ h4{
 }
 .grise{
    background-color:#333639; 
-   height:170px;
+   height:140px;
 }
 .noire{
     display: flex;
     flex-direction: column;
     gap:10px;
     background-color:black; 
-    height: 254px;
+    height: 284px;
     border-bottom: 1px solid gray;
  }
 
@@ -907,7 +922,7 @@ h4{
     width:120px;
     border-radius: 50%;
     position:absolute;
-    top: 155px;
+    top: 125px;
  }
 
  .image-profil-imageUser{
